# dev-council

./: .gitignore  README.md
backend/: README.md  go.mod  go.sum  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: consensus_agent.py  flow_diagram.py  manager.py  milestone.py  project_lead.py  tech_stack_agent.py
backend/app/core/: config.py
backend/app/tools/: llm_resources.py  mermaid.py  save_file.py  web_search.py
backend/cmd/orchestrator/: main.go
backend/internal/debate/: turn.go
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
